fix(dependencies): update styles, increase contrast

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -4,7 +4,7 @@
   --radius: 0.375rem;
   --base: #aaa;
   --positive: #008000;
-  --negative: #a10000;
+  --negative: #e00000;
   &[data-theme="github"] {
     --base: #7d8590;
     --background: #0d1117;
